--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
     <div class="row"> 
       <div class="col-md-6">
         <ul>
-        <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
+        <h6><li><a href="#customitem">Custom Item</a></li></h6>
         </ul>    
       </div>      
     </div>
     <div class="bg-light p-3" id="customitem">      
       <div class="container">
-        <h5>BMIDE - Custom Item</h5>
+        <h5>Custom Item</h5>
         <div class="row">
           <div class="col-sm">
             <li>Custom item creation and depoyment using BMIDE</li>                     
@@ -278,11 +278,11 @@
         <div class="row">
           <div class="col-sm">
             <img src="images/Teamcenter/BMIDE/AWC_Custom_Item.png" class="img-fluid">
-            <figcaption>Teamcenter - Custom Item</figcaption>
+            <figcaption>Active Workspace - Custom Item</figcaption>
           </div>
           <div class="col-sm">
             <img src="images/Teamcenter/BMIDE/RAC_Custom_Item.png" class="img-fluid">
-            <figcaption>Active Workspace - Custom Item</figcaption>
+            <figcaption>Rich Client - Custom Item</figcaption>
           </div>
         </div>        
       </div>
