--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
       <div class="col-md-6">
         <ul>
         <h6><li><a href="#customitem">Custom Item</a></li></h6>
+        <h6><li><a href="#customitemicon">Custom Icon (Item & Item Revision)</a></li></h6>
         </ul>    
       </div>      
     </div>
@@ -288,6 +289,33 @@
       </div>
     </div>
     </div>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customitemicon">      
+        <div class="container">
+          <h5>Custom Item Icon</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom icon for item and item revision</li>                     
+            </div>
+            <div class="col-sm">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          <br>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/RAC - Custom Item Icon.png" class="img-fluid">
+              <figcaption>RAC - Custom Icon of Item & Item Revision</figcaption>
+            </div>
+          </div>        
+        </div>
+      </div>
+      </div>
+    <br>
   <div class="container-narrow">
     <h2 class="h4 my-2 text-center" id="nxcustomization">NX Customization</h2>
 <div class="row"> 
