--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="col-md-6">
         <ul>
         <h6><li><a href="#customitem">Custom Item</a></li></h6>
-        <h6><li><a href="#customitemicon">Custom Icon (Item & Item Revision)</a></li></h6>
+        <h6><li><a href="#customitemicon">Custom Icons (Item & Item Revision)</a></li></h6>
         </ul>    
       </div>      
     </div>
@@ -293,10 +293,10 @@
     <div class="container-narrow">
       <div class="bg-light p-3" id="customitemicon">      
         <div class="container">
-          <h5>Custom Item Icon</h5>
+          <h5>Custom Icons</h5>
           <div class="row">
             <div class="col-sm">
-              <li>Custom icon for item and item revision</li>                     
+              <li>Custom icons for item and item revision</li>                     
             </div>
             <div class="col-sm">
               <div class="iframe-container">
