--- a/index.html
+++ b/index.html
@@ -256,14 +256,15 @@
     <div class="row"> 
       <div class="col-md-6">
         <ul>
-        <h6><li><a href="#customitem">Custom Item</a></li></h6>
-        <h6><li><a href="#customitemicon">Custom Icons (Item & Item Revision)</a></li></h6>
+        <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
+        <h6><li><a href="#customitemicon">BMIDE - Custom Icons (Item & Item Revision)</a></li></h6>
+        <!-- <h6><li><a href="#customproperties">BMIDE - Custom Properties with LOVs</a></li></h6> -->
         </ul>    
       </div>      
     </div>
     <div class="bg-light p-3" id="customitem">      
       <div class="container">
-        <h5>Custom Item</h5>
+        <h5>BMIDE - Custom Item</h5>
         <div class="row">
           <div class="col-sm">
             <li>Custom item creation and depoyment using BMIDE</li>                     
@@ -293,7 +294,7 @@
     <div class="container-narrow">
       <div class="bg-light p-3" id="customitemicon">      
         <div class="container">
-          <h5>Custom Icons</h5>
+          <h5>BMIDE - Custom Icons</h5>
           <div class="row">
             <div class="col-sm">
               <li>Custom icons for item and item revision</li>                     
@@ -314,6 +315,37 @@
           </div>        
         </div>
       </div>
+      </div>
+      <br>
+      <!-- <div class="bg-light p-3" id="customproperties">      
+        <div class="container">
+          <h5>BMIDE - Custom Properties with LOVs</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom properties of item and item revision</li>                     
+              <li>List of Values (LOV) attached to properties</li>                     
+              <li>Properties behaviour for save as and revise operation</li>                     
+            </div>
+            <div class="col-sm">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RWX3j3lshmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          <br>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/AWC_Custom_Item.png" class="img-fluid">
+              <figcaption>Active Workspace - Custom Item</figcaption>
+            </div>
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/RAC_Custom_Item.png" class="img-fluid">
+              <figcaption>Rich Client - Custom Item</figcaption>
+            </div>
+          </div>        
+        </div>
+      </div> -->
       </div>
     <br>
   <div class="container-narrow">
