--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>              
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>                        
+              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>   -->
+              <li class="nav-item"><a class="nav-link" href="#teamcentercustomization">Teamcenter</a></li>  
+              <li class="nav-item"><a class="nav-link" href="#nxcustomization">NX</a></li>                        
             </ul>
           </div>
         </div>
