--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <ul>
         <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
         <h6><li><a href="#customitemicon">BMIDE - Custom Icons (Item & Item Revision)</a></li></h6>
-        <!-- <h6><li><a href="#customproperties">BMIDE - Custom Properties with LOVs</a></li></h6> -->
+        <h6><li><a href="#customproperties">BMIDE - Custom Properties with LOVs</a></li></h6>
         </ul>    
       </div>      
     </div>
@@ -319,18 +319,18 @@
       </div>
       </div>
       <br>
-      <!-- <div class="bg-light p-3" id="customproperties">      
+      <div class="bg-light p-3" id="customproperties">      
         <div class="container">
           <h5>BMIDE - Custom Properties with LOVs</h5>
           <div class="row">
             <div class="col-sm">
-              <li>Custom properties of item and item revision</li>                     
+              <li>Custom properties on item revision</li>                     
               <li>List of Values (LOV) attached to properties</li>                     
               <li>Properties behaviour for save as and revise operation</li>                     
             </div>
             <div class="col-sm">
               <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RWX3j3lshmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DsVOCtU5a8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
               </div>
             </div>
           </div>
@@ -338,16 +338,16 @@
         <div class="container">
           <div class="row">
             <div class="col-sm">
-              <img src="images/Teamcenter/BMIDE/AWC_Custom_Item.png" class="img-fluid">
-              <figcaption>Active Workspace - Custom Item</figcaption>
+              <img src="images/Teamcenter/BMIDE/Custom Properties on Item Revision.png" class="img-fluid">
+              <figcaption>Custom item property with LOVs.png</figcaption>
             </div>
             <div class="col-sm">
-              <img src="images/Teamcenter/BMIDE/RAC_Custom_Item.png" class="img-fluid">
-              <figcaption>Rich Client - Custom Item</figcaption>
+              <img src="images/Teamcenter/BMIDE/Custom Property with LOVs.png" class="img-fluid">
+              <figcaption>Custom item revision property with LOVs</figcaption>
             </div>
           </div>        
         </div>
-      </div> -->
+      </div>
       </div>
     <br>
   <div class="container-narrow">
