--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <ul>
         <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
         <h6><li><a href="#customitemicon">BMIDE - Custom Icons (Item & Item Revision)</a></li></h6>
-        <h6><li><a href="#customproperties">BMIDE - Custom Properties with LOVs</a></li></h6>
+        <h6><li><a href="#customproperties">BMIDE - Custom Properties</a></li></h6>
         </ul>    
       </div>      
     </div>
@@ -321,7 +321,7 @@
       <br>
       <div class="bg-light p-3" id="customproperties">      
         <div class="container">
-          <h5>BMIDE - Custom Properties with LOVs</h5>
+          <h5>BMIDE - Custom Properties</h5>
           <div class="row">
             <div class="col-sm">
               <li>Custom properties on item revision</li>                     
