--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <div class="row">
             <div class="col-sm">
               <img src="images/Teamcenter/BMIDE/Custom Properties on Item Revision.png" class="img-fluid">
-              <figcaption>Custom item property with LOVs.png</figcaption>
+              <figcaption>Custom item properties.png</figcaption>
             </div>
             <div class="col-sm">
               <img src="images/Teamcenter/BMIDE/Custom Property with LOVs.png" class="img-fluid">
