--- a/index.html
+++ b/index.html
@@ -257,11 +257,15 @@
     <h2 class="h4 my-2 text-center" id="teamcentercustomization">Teamcenter Customization</h2>
     <div class="row"> 
       <div class="col-md-6">
+        <h6><li><a>BMIDE</a></h6>
         <ul>
-        <h6><li><a href="#customitem">BMIDE - Custom Item</a></li></h6>
-        <h6><li><a href="#customitemicon">BMIDE - Custom Icons (Item & Item Revision)</a></li></h6>
-        <h6><li><a href="#customproperties">BMIDE - Custom Properties</a></li></h6>
-        </ul>    
+        <h6><li><a href="#customitem">Custom Item</a></li></h6>
+        <h6><li><a href="#customitemicon">Custom Icons (Item & Item Revision)</a></li></h6>
+        <h6><li><a href="#customproperties">Custom Properties</a></li></h6>
+        <h6><li><a href="#customform">Custom Form</a></li></h6>
+        <h6><li><a href="#customdataset">Custom Dataset, Relation & Tool</a></li></h6>
+        </ul> 
+      </ul>   
       </div>      
     </div>
     <div class="bg-light p-3" id="customitem">      
@@ -344,6 +348,71 @@
             <div class="col-sm">
               <img src="images/Teamcenter/BMIDE/Custom Property with LOVs.png" class="img-fluid">
               <figcaption>Custom item revision property with LOVs</figcaption>
+            </div>
+          </div>        
+        </div>
+      </div>
+      </div>
+      <br>
+      <div class="container-narrow">
+        <div class="bg-light p-3" id="customform">      
+          <div class="container">
+            <h5>BMIDE - Custom Form</h5>
+            <div class="row">
+              <div class="col-sm">
+                <li>Custom form for the custom item</li>                     
+              </div>
+              <div class="col-sm">
+                <div class="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+            <br>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Form.png" class="img-fluid">
+                <figcaption>Custom Form</figcaption>
+              </div>
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Form Properties.png" class="img-fluid">
+                <figcaption>Custom Form Properties</figcaption>
+              </div>
+            </div>        
+          </div>
+          
+        </div>
+        </div>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customdataset">      
+        <div class="container">
+          <h5>BMIDE - Custom Dataset, Relation & Tool</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom Dataset, Relation & Tool for the custom item</li>                     
+            </div>
+            <div class="col-sm">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          <br>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/Custom Dataset.png" class="img-fluid">
+              <figcaption>Custom Dataset</figcaption>
+            </div>
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
+              <figcaption>Custom Relation</figcaption>
+            </div>
+            <div class="col-sm">
+              <img src="images/Teamcenter/BMIDE/Custom Relation.png" class="img-fluid">
+              <figcaption>Custom Tool</figcaption>
             </div>
           </div>        
         </div>
