--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
         <h6><li><a href="#customitemicon">Custom Icons (Item & Item Revision)</a></li></h6>
         <h6><li><a href="#customproperties">Custom Properties</a></li></h6>
         <h6><li><a href="#customform">Custom Form</a></li></h6>
-        <h6><li><a href="#customdataset">Custom Dataset, Relation & Tool</a></li></h6>
+        <h6><li><a href="#customdataset">Custom Dataset</a></li></h6>
+        <h6><li><a href="#customtool">Custom Tool</a></li></h6>
+        <h6><li><a href="#customrelation">Custom Relation</a></li></h6>
         </ul> 
       </ul>   
       </div>      
@@ -304,12 +306,7 @@
           <div class="row">
             <div class="col-sm">
               <li>Custom icons for item and item revision</li>                     
-            </div>
-            <div class="col-sm">
-              <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-            </div>
+            </div>            
           </div>
           <br>
         <div class="container">
@@ -317,6 +314,11 @@
             <div class="col-sm">
               <img src="images/Teamcenter/BMIDE/RAC - Custom Item Icon.png" class="img-fluid">
               <figcaption>RAC - Custom Icon of Item & Item Revision</figcaption>
+            </div>
+            <div class="col-sm">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
             </div>
           </div>        
         </div>
@@ -362,11 +364,11 @@
               <div class="col-sm">
                 <li>Custom form for the custom item</li>                     
               </div>
-              <div class="col-sm">
+              <!-- <div class="col-sm">
                 <div class="iframe-container">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-              </div>
+              </div> -->
             </div>
             <br>
           <div class="container">
@@ -388,15 +390,10 @@
     <div class="container-narrow">
       <div class="bg-light p-3" id="customdataset">      
         <div class="container">
-          <h5>BMIDE - Custom Dataset, Relation & Tool</h5>
+          <h5>BMIDE - Custom Dataset</h5>
           <div class="row">
             <div class="col-sm">
-              <li>Custom Dataset, Relation & Tool for the custom item</li>                     
-            </div>
-            <div class="col-sm">
-              <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
+              <li>Custom dataset for the custom item</li>                     
             </div>
           </div>
           <br>
@@ -406,16 +403,68 @@
               <img src="images/Teamcenter/BMIDE/Custom Dataset.png" class="img-fluid">
               <figcaption>Custom Dataset</figcaption>
             </div>
-            <div class="col-sm">
-              <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
-              <figcaption>Custom Tool</figcaption>
-            </div>
-            <div class="col-sm">
-              <img src="images/Teamcenter/BMIDE/Custom Relation.png" class="img-fluid">
-              <figcaption>Custom Relation</figcaption>
-            </div>
+            <!-- <div class="col-sm">
+              <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div> -->
           </div>        
         </div>
+      </div>
+      </div>
+    <br>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customtool">      
+        <div class="container">
+          <h5>BMIDE - Custom Tool</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom tool for the custom item</li>                     
+            </div>            
+          </div>  
+          <br>      
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
+                <figcaption>Custom Tool</figcaption>
+              </div>
+              <!-- <div class="col-sm">
+                <div class="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div> -->
+              </div>
+            </div>        
+          </div>       
+        </div>
+      </div>
+      </div>
+    <br>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customrelation">      
+        <div class="container">
+          <h5>BMIDE - Custom Relation</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom relation for the custom item</li>                     
+            </div>            
+          </div>
+          <br>
+                 <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Relation.png" class="img-fluid">
+                <figcaption>Custom Relation</figcaption>
+              </div>
+              <!-- <div class="col-sm">
+                <div class="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div> -->
+            </div>        
+          </div>
       </div>
       </div>
     <br>
