--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
               <div class="col-sm">
                 <li>Custom form for the custom item</li>                     
               </div>
-              <!-- <div class="col-sm">
+              <div class="col-sm">
                 <div class="iframe-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/_Iyuish9rZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-              </div> -->
+              </div>
             </div>
             <br>
           <div class="container">
