--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@
                 <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
                 <figcaption>Custom Tool</figcaption>
               </div>
-              <!-- <div class="col-sm">
+              <div class="col-sm">
                 <div class="iframe-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div> -->
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/zn8za9rhIf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
               </div>
             </div>        
           </div>       
