--- a/index.html
+++ b/index.html
@@ -458,11 +458,11 @@
                 <img src="images/Teamcenter/BMIDE/Custom Relation.png" class="img-fluid">
                 <figcaption>Custom Relation</figcaption>
               </div>
-              <!-- <div class="col-sm">
+              <div class="col-sm">
                 <div class="iframe-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6PhjkF_wtEs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/GbdidZJkVJ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-              </div> -->
+              </div>
             </div>        
           </div>
       </div>
