--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
         <h6><li><a href="#customdataset">Custom Dataset</a></li></h6>
         <h6><li><a href="#customtool">Custom Tool</a></li></h6>
         <h6><li><a href="#customrelation">Custom Relation</a></li></h6>
+        <h6><li><a href="#customnote">Custom Note</a></li></h6>
+        <h6><li><a href="#customuom">Custom Unit of Measure</a></li></h6>
         </ul> 
       </ul>   
       </div>      
@@ -465,6 +467,62 @@
               </div>
             </div>        
           </div>
+      </div>
+      </div>
+    <br>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customnote">      
+        <div class="container">
+          <h5>BMIDE - Custom Note</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom note</li>                     
+            </div>            
+          </div>  
+          <br>      
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
+                <figcaption>Custom Tool</figcaption>
+              </div>
+              <div class="col-sm">
+                <div class="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/zn8za9rhIf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              </div>
+            </div>        
+          </div>       
+        </div>
+      </div>
+      </div>
+    <br>
+    <br>
+    <div class="container-narrow">
+      <div class="bg-light p-3" id="customuom">      
+        <div class="container">
+          <h5>BMIDE - Custom Unit of Measure</h5>
+          <div class="row">
+            <div class="col-sm">
+              <li>Custom unit of measure</li>                     
+            </div>            
+          </div>  
+          <br>      
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="images/Teamcenter/BMIDE/Custom Units.png" class="img-fluid">
+                <figcaption>Custom Units</figcaption>
+              </div>
+              <div class="col-sm">
+                <div class="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/vhSCEGSOpSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              </div>
+            </div>        
+          </div>       
+        </div>
       </div>
       </div>
     <br>
