--- a/index.html
+++ b/index.html
@@ -484,12 +484,12 @@
           <div class="container">
             <div class="row">
               <div class="col-sm">
-                <img src="images/Teamcenter/BMIDE/Custom Tool.png" class="img-fluid">
-                <figcaption>Custom Tool</figcaption>
+                <img src="images/Teamcenter/BMIDE/Custom_Note.png" class="img-fluid">
+                <figcaption>Custom Note</figcaption>
               </div>
               <div class="col-sm">
                 <div class="iframe-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/zn8za9rhIf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/YiImVlT-JVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
               </div>
             </div>        
