--- a/index.html
+++ b/index.html
@@ -264,13 +264,19 @@
         <h6><li><a href="#customproperties">Custom Properties</a></li></h6>
         <h6><li><a href="#customform">Custom Form</a></li></h6>
         <h6><li><a href="#customdataset">Custom Dataset</a></li></h6>
+        </ul> 
+        </ul>   
+      </div>      
+      <div class="col-md-6">
+        <h6><li><a>BMIDE</a></h6>
+        <ul>
         <h6><li><a href="#customtool">Custom Tool</a></li></h6>
         <h6><li><a href="#customrelation">Custom Relation</a></li></h6>
         <h6><li><a href="#customnote">Custom Note</a></li></h6>
         <h6><li><a href="#customuom">Custom Unit of Measure</a></li></h6>
         </ul> 
-      </ul>   
-      </div>      
+        </ul>   
+      </div>  
     </div>
     <div class="bg-light p-3" id="customitem">      
       <div class="container">
