--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#teamcentercustomization">Teamcenter</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#nxcustomization">NX</a></li>                         
+              <li class="nav-item">
+                <a class="nav-link" href="#nxcustomization">NX</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -338,9 +340,9 @@
                 </div>
               </div>
               <div class="container-narrow">
-                <h2 class="h4 my-2 text-center" id="teamcentercustomization">Teamcenter Customization</h2>
+                <h2 class="h4 my-2 text-center" id="teamcentercustomization">Teamcenter Customization & Administration</h2>
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <h6>
                       <li>
                         <a>BMIDE</a>
@@ -374,7 +376,7 @@
                     </ul>
                     </ul>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <h6>
                       <li>
                         <a>BMIDE</a>
@@ -400,6 +402,20 @@
                           <a href="#customuom">Custom Unit of Measure</a>
                         </li>
                       </h6>
+                    </ul>
+                    </ul>
+                  </div>
+                  <div class="col-md-4">
+                    <h6>
+                      <li>
+                        <a>Administration</a>
+                    </h6>
+                    <ul>
+                      <h6>
+                        <li>
+                          <a href="#organization">Organization</a>
+                        </li>
+                      </h6>                    
                     </ul>
                     </ul>
                   </div>
@@ -650,6 +666,30 @@
                                     <div class="iframe-container">
                                       <iframe width="560" height="315" src="https://www.youtube.com/embed/vhSCEGSOpSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <br>
+                        <br>
+                        <div class="container-narrow">
+                          <div class="bg-light p-3" id="organization">
+                            <div class="container">
+                              <h5>Organization</h5>
+                              <div class="row">
+                                <div class="col-sm">
+                                  <li>Organization hierarchy using the make_user utility</li>
+                                </div>
+                              </div>
+                              <br>
+                              <div class="container">
+                                <div class="row">
+                                  <div class="col-sm">
+                                    <img src="images/Teamcenter/Administration/Organization.png" class="img-fluid">
+                                    <figcaption>Organization</figcaption>
+                                  </div>                                  
                                   </div>
                                 </div>
                               </div>
@@ -944,7 +984,7 @@
                           <br>
                           <div class="container">
                             <div class="row">
-                              <div class="col-sm">undefined<img src="images/Templates/Custom Templates.png" class="img-fluid">undefined<figcaption>Custom Templates</figcaption>undefined</div>
+                              <div class="col-sm">undefinedundefined<img src="images/Templates/Custom Templates.png" class="img-fluid">undefinedundefined<figcaption>Custom Templates</figcaption>undefinedundefined</div>
                             </div>
                           </div>
                         </div>
@@ -953,17 +993,17 @@
                       <div class="bg-light p-3" id="nxopen-highlightobjects">
                         <div class="container">
                           <h5>NX Open - Highlight Objects</h5>
-                          <div class="row">undefined<div class="col-sm">undefined<li>NX Open program using undefined<b>Windows Form</b> and undefined<b>Block Styler UI</b> to highlight objects of typeundefined</li>undefined<ul>undefined<li>Edges</li>undefined<li>Faces</li>undefined<li>Bodies</li>undefined</ul>undefined</div>undefined<div class="col-sm">undefined<div class="iframe-container">undefined<iframe width="560" height="315" src="https://www.youtube.com/embed/KbPMrhhuiTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>undefined</div>undefined</div>
+                          <div class="row">undefinedundefined<div class="col-sm">undefinedundefined<li>NX Open program using undefinedundefined<b>Windows Form</b> and undefinedundefined<b>Block Styler UI</b> to highlight objects of typeundefinedundefined</li>undefinedundefined<ul>undefinedundefined<li>Edges</li>undefinedundefined<li>Faces</li>undefinedundefined<li>Bodies</li>undefinedundefined</ul>undefinedundefined</div>undefinedundefined<div class="col-sm">undefinedundefined<div class="iframe-container">undefinedundefined<iframe width="560" height="315" src="https://www.youtube.com/embed/KbPMrhhuiTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>undefinedundefined</div>undefinedundefined</div>
                           </div>
-                          <div class="container">undefined<div class="row">undefined<div class="col-sm">undefined<img src="images/NXOpen/Highlight Objects.png" class="img-fluid">undefined<figcaption>Highlight Objects (Windows Form and Block UI Styler)</figcaption>undefined</div>undefined</div>undefined</div>
+                          <div class="container">undefinedundefined<div class="row">undefinedundefined<div class="col-sm">undefinedundefined<img src="images/NXOpen/Highlight Objects.png" class="img-fluid">undefinedundefined<figcaption>Highlight Objects (Windows Form and Block UI Styler)</figcaption>undefinedundefined</div>undefinedundefined</div>undefinedundefined</div>
                         </div>
                         <br>
                       </div>
-                      <br>undefined<footer class="pt-4 pb-4 text-center bg-light">undefined<div class="container">undefined<div class="my-3">undefined<div class="h4">Ganesh Kadole</div>undefined<p>Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p>undefined<div class="social-nav">undefined<nav role="navigation">undefined<ul class="nav justify-content-center">undefined<li class="nav-item">undefined<a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn">undefined<i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i>undefined<span class="menu-title sr-only">LinkedIn</span>undefined</a>undefined</li>undefined<li class="nav-item">undefined<a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="Community">undefined<i class="fas fa-users fa-2x" style='color:#000000'></i>undefined<span class="menu-title sr-only">Siemens Community</span>undefined</a>undefined</li>undefined</ul>undefined</nav>undefined</div>undefined</div>undefined<div class="text-small text-secondary">undefined
-                            <!-- <div class="mb-1">&copy; Ganesh Kadole. All rights reserved.</div> -->undefined<div>undefined
-                              <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - undefined<a href="https://templateflip.com/" target="_blank">TemplateFlip</a>undefined
-                            </div>undefined
-                          </div>undefined</div>undefined</footer>
+                      <br>undefinedundefined<footer class="pt-4 pb-4 text-center bg-light">undefinedundefined<div class="container">undefinedundefined<div class="my-3">undefinedundefined<div class="h4">Ganesh Kadole</div>undefinedundefined<p>Applications Engineer (Teamcenter NX, Cloud ) at Siemens</p>undefinedundefined<div class="social-nav">undefinedundefined<nav role="navigation">undefinedundefined<ul class="nav justify-content-center">undefinedundefined<li class="nav-item">undefinedundefined<a class="nav-link" href="https://www.linkedin.com/in/ganeshkadole/" target="_blank" title="LinkedIn">undefinedundefined<i class="fab fa-linkedin fa-2x" style='color:#0072b1'></i>undefinedundefined<span class="menu-title sr-only">LinkedIn</span>undefinedundefined</a>undefinedundefined</li>undefinedundefined<li class="nav-item">undefinedundefined<a class="nav-link" href="https://community.sw.siemens.com/s/profile/0054O000007xnlc" target="_blank" title="Community">undefinedundefined<i class="fas fa-users fa-2x" style='color:#000000'></i>undefinedundefined<span class="menu-title sr-only">Siemens Community</span>undefinedundefined</a>undefinedundefined</li>undefinedundefined</ul>undefinedundefined</nav>undefinedundefined</div>undefinedundefined</div>undefinedundefined<div class="text-small text-secondary">undefined undefined
+                            <!-- <div class="mb-1">&copy; Ganesh Kadole. All rights reserved.</div> -->undefinedundefined<div>undefined undefined
+                              <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - undefinedundefined<a href="https://templateflip.com/" target="_blank">TemplateFlip</a>undefined undefined
+                            </div>undefined undefined
+                          </div>undefinedundefined</div>undefinedundefined</footer>
                     </div>
                   </div>
                   <!-- <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div> -->
